# api

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  compose-dev.yml  compose.yml  docker-compose-dev.yml  docker-compose-prod.yml  pyproject.toml  template.env
.github/: dependabot.yml  renovate.json
.github/workflows/: ci-cd.yml  deploy.yaml  security.yml  sync.yml  tests.yml
config/: application.toml
scripts/: install.sh  lint.sh  test.sh  tests.sh
src/: api.py  database.py  docker.py  main.py  models.py
src/controllers/: auth.py  docker.py  health_check.py  ip.py  valentines_day.py
src/util/: auth.py  docker.py  healthcheck.py
templates/: valentine.html
test/: test_docker.py  test_health_check.py
tests/: test_docker.py  test_health_check.py  test_ip.py
