[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "Jack Stockley", email = "jack@jstockley.com"}
]
readme = "README.md"
package-mode = false
requires-python = "<4.0,>=3.13"
dependencies = [
    "fastapi==0.115.11",
    "uvicorn[standard]==0.34.0",
    "httpx==0.28.1",
    "python-multipart==0.0.20",
    "sqlalchemy==2.0.38",
    "sqlmodel==0.0.24",
    "pytz==2025.1",
    "psycopg==3.2.5",
    "psycopg-binary==3.2.5",
]

[tool.poetry.group.dev.dependencies]
pytest = "==8.3.5"
pytest-cov = "==6.0.0"
testcontainers = {extras = ["postgres"], version = "==4.9.2"}
ruff = "==0.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
